Add `DELETE` endpoint
